# cookiecutter-data-science

./: .cursorignore  README.md  ccds.json  dev-requirements.txt
ccds/hook_utils/: dependencies.py
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  Makefile  pyproject.toml
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/: process.py  train_model.py
